Modificacion de colores y agregado de card

--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -5,9 +5,11 @@
 @import 'layout';
 @import 'izquierda';
 @import 'derecha';
+@import 'cards-index';
 @import 'footer';
 @import 'reset';
 @import 'cards';
+@import 'foro';
 
 
 
