--- a/scss/_izquierda.scss
+++ b/scss/_izquierda.scss
@@ -1,21 +1,22 @@
 .left{
     grid-area: left;
-    margin-top: 50px;
+    
+    background-color: var(--primary-color);
+    color: #e9dbd8;
     h1{
-        font-family: 'Roboto', sans-serif;
-        text-transform: uppercase;
-        font-size: 2.2rem;
+        font-size: 5rem;
         margin-bottom: 20px;
-        font-weight: 400;
+        font-weight: 600;
         letter-spacing: 5px;
-        line-height: 2px;
+        line-height: 1.2;
+        margin-top: 50px;
     }
     h2{
-        font-family: 'Open Sans', cursive;
-        color: black;
-        font-size: 1rem;
+        
+       
+        font-size: 2rem;
         font-weight: bold;
-        text-transform: uppercase;
+       
         margin-bottom: 5rem;
     }
 }
@@ -71,7 +72,8 @@ button.animales__items:hover{
 .input-group--mod{
     left: 350px;
     position: relative;
-    width: 195px;
+    width: 147px;
+    background-color: #9ab0e9;
     &:hover{
         background-color: #e9c6b5;
     }
@@ -90,3 +92,6 @@ button.animales__items:hover{
 }
 
   
+button#button-addon2\ buscar{
+    background-color: #9ab0e9;
+}
