--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,24 +1,104 @@
-.nav{
-    grid-area: nav;
-    margin-bottom: 20px;
-    
-    ul{
-        display: flex;
-        gap: 2rem;
-        li{
-            list-style: none;
-            font-family: 'Open Sans', sans-serif;
-            font-size: 1.2rem;
-            &:hover{
-                color: blue;
-            }
-        }
-        
-    }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+:root{
+    --primary-color: #0a2f35;
+    --grey: #e9dbd8;
+    --overlay: #0000009c;
+    font-size: 62.5%;
+}
+.bg-primary{
+    background-color: var(--primary-color);
+    color: #e9dbd8;
 }
 
+header {
+    background: var(--primary-color);
+    color: #e9dbd8;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 300;
+    position: sticky;
+    width: 100%;
+    z-index: 1000;
+    grid-area: nav;
+}
+nav li a{
+    color: #e9dbd8;
+    padding:0.0625em;
+    display: block;
+}
+nav li a:hover{
+    color: var(--primary-color);
+    background-color: #e9dbd8;
+    cursor: pointer;
+    transition: 0.3s;
+}
 
 .text-bg-purple{
     background-color: #e0dbd8;
     }
    
+    #logo{
+        display: unset;
+        height: 70px;
+        width: 80px;
+    }
+
+    @media (min-width:480px) {
+        header{
+            
+            align-items: center;
+            background: #e9dbd8;
+    
+        }
+        #logo{
+            display: unset;
+            height: 70px;
+            width: 80px;
+        }
+        nav ul{
+            display: flex;
+            align-items: center;
+        }
+        nav li a{
+            color: #0000009c;
+            margin-right: 0.5em;
+            font-weight: 600;
+        }
+    
+    }
+    
+    @media (min-width:720px) {
+       
+        .home,.features.team{
+            width: 80%;
+            margin: auto;
+        }
+    }
+    @media (min-width:900px) {
+        nav li a{
+            margin-right: 1em;
+        }
+        .features,.team{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+        .grid-item-one,.grid-item-two{
+            margin: auto;
+        }
+        
+        footer{
+            font-size: 1.8rem;
+            font-weight: 300;
+        }
+    }
+    
+    @media (min-width:1200px) {
+        .center{
+            max-width: 1200px;
+            margin: auto;
+        }
+        header{
+            justify-content: space-evenly;
+            align-items: center;
+        }
+    }
