--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -6,4 +6,5 @@
 body{
     background: -webkit-linear-gradient(transparent, rgba( 110, 110, 110, .3)), -webkit-linear-gradient(350deg, rgba(250, 214, 195, .8) 30%, #B0EAE8 120%);
   background: linear-gradient(transparent, rgba( 110, 110, 110, .3)), linear-gradient(100deg, rgba(250, 214, 195, .8) 30%, #B0EAE8 120%);
+  font-family: 'Poppins', sans-serif;
 }
