--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -1,36 +1,114 @@
 @import url("https://fonts.googleapis.com/css2?family=Island+Moments&family=Open+Sans:wght@300&family=Roboto:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 @import 'https://fonts.googleapis.com/css?family=Do+Hyeon';
-.nav {
+:root {
+  --primary-color: #0a2f35;
+  --grey: #e9dbd8;
+  --overlay: #0000009c;
+  font-size: 62.5%;
+}
+
+.bg-primary {
+  background-color: var(--primary-color);
+  color: #e9dbd8;
+}
+
+header {
+  background: var(--primary-color);
+  color: #e9dbd8;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 300;
+  position: -webkit-sticky;
+  position: sticky;
+  width: 100%;
+  z-index: 1000;
   grid-area: nav;
-  margin-bottom: 20px;
 }
-.nav ul {
-  display: flex;
-  gap: 2rem;
+
+nav li a {
+  color: #e9dbd8;
+  padding: 0.0625em;
+  display: block;
 }
-.nav ul li {
-  list-style: none;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.2rem;
-}
-.nav ul li:hover {
-  color: blue;
+
+nav li a:hover {
+  color: var(--primary-color);
+  background-color: #e9dbd8;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 .text-bg-purple {
   background-color: #e0dbd8;
 }
 
+#logo {
+  display: unset;
+  height: 70px;
+  width: 80px;
+}
+
+@media (min-width: 480px) {
+  header {
+    align-items: center;
+    background: #e9dbd8;
+  }
+  #logo {
+    display: unset;
+    height: 70px;
+    width: 80px;
+  }
+  nav ul {
+    display: flex;
+    align-items: center;
+  }
+  nav li a {
+    color: rgba(0, 0, 0, 0.6117647059);
+    margin-right: 0.5em;
+    font-weight: 600;
+  }
+}
+@media (min-width: 720px) {
+  .home, .features.team {
+    width: 80%;
+    margin: auto;
+  }
+}
+@media (min-width: 900px) {
+  nav li a {
+    margin-right: 1em;
+  }
+  .features, .team {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .grid-item-one, .grid-item-two {
+    margin: auto;
+  }
+  footer {
+    font-size: 1.8rem;
+    font-weight: 300;
+  }
+}
+@media (min-width: 1200px) {
+  .center {
+    max-width: 1200px;
+    margin: auto;
+  }
+  header {
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
 .layout {
   display: grid;
-  grid-template-areas: "nav nav nav nav" "left left right right" "left left right right" "left left right right" "footer footer footer footer";
+  grid-template-areas: "nav nav nav nav" "left left right right" " card card card card" "footer footer footer footer";
   grid-template-columns: 27% 27% 23% 23%;
 }
 
 h2 {
-  font-family: "Island Moments", cursive;
   font-size: 3rem;
-  color: rgb(64, 180, 184);
 }
 h2 .rescata {
   margin-left: 1rem;
@@ -40,23 +118,20 @@ h2 .rescata {
 
 .left {
   grid-area: left;
-  margin-top: 50px;
+  background-color: var(--primary-color);
+  color: #e9dbd8;
 }
 .left h1 {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  font-size: 2.2rem;
+  font-size: 5rem;
   margin-bottom: 20px;
-  font-weight: 400;
+  font-weight: 600;
   letter-spacing: 5px;
-  line-height: 2px;
+  line-height: 1.2;
+  margin-top: 50px;
 }
 .left h2 {
-  font-family: "Open Sans", cursive;
-  color: black;
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: bold;
-  text-transform: uppercase;
   margin-bottom: 5rem;
 }
 
@@ -106,7 +181,8 @@ button.animales__items:focus {
 .input-group--mod {
   left: 350px;
   position: relative;
-  width: 195px;
+  width: 147px;
+  background-color: #9ab0e9;
 }
 .input-group--mod:hover {
   background-color: #e9c6b5;
@@ -126,13 +202,42 @@ button.animales__items:focus {
   color: rgb(53, 21, 104);
 }
 
+button#button-addon2\ buscar {
+  background-color: #9ab0e9;
+}
+
 .right {
   grid-area: right;
+  background-color: var(--primary-color);
 }
 
 #map {
   height: 60vh;
   width: 50hw;
+}
+
+.card-foro {
+  grid-area: card;
+  background-color: white;
+}
+
+.blog .blog-thumbnail {
+  background-size: cover;
+  background-position: center center;
+  min-height: 300px;
+  display: flex;
+  align-items: center;
+  gap: 70px;
+}
+.blog a:hover {
+  opacity: 0.5;
+  text-decoration: none;
+}
+
+.al-foro {
+  margin-top: 100px;
+  font-size: 2rem;
+  color: rgb(141, 136, 251);
 }
 
 .footer {
@@ -189,6 +294,7 @@ button.animales__items:focus {
 
 body {
   background: linear-gradient(transparent, rgba(110, 110, 110, 0.3)), linear-gradient(100deg, rgba(250, 214, 195, 0.8) 30%, #B0EAE8 120%);
+  font-family: "Poppins", sans-serif;
 }
 
 *,
@@ -345,4 +451,242 @@ body {
 }
 .card__collection .cards--two ul li:nth-child(4) {
   transition-delay: 0.4s;
+}
+
+a {
+  color: #03658c;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+/** ====================
+* Lista de Comentarios
+=======================*/
+.comments-container {
+  margin: 60px auto 15px;
+  width: 768px;
+}
+
+.comments-container h1 {
+  font-size: 36px;
+  color: #283035;
+  font-weight: 400;
+}
+
+.comments-container h1 a {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.comments-list {
+  margin-top: 30px;
+  position: relative;
+}
+
+/**
+* Lineas / Detalles
+-----------------------*/
+.comments-list:before {
+  content: "";
+  width: 2px;
+  height: 100%;
+  background: #c7cacb;
+  position: absolute;
+  left: 32px;
+  top: 0;
+}
+
+.comments-list:after {
+  content: "";
+  position: absolute;
+  background: #c7cacb;
+  bottom: 0;
+  left: 27px;
+  width: 7px;
+  height: 7px;
+  border: 3px solid #dee1e3;
+  border-radius: 50%;
+}
+
+.reply-list:before, .reply-list:after {
+  display: none;
+}
+
+.reply-list li:before {
+  content: "";
+  width: 60px;
+  height: 2px;
+  background: #c7cacb;
+  position: absolute;
+  top: 25px;
+  left: -55px;
+}
+
+.comments-list li {
+  margin-bottom: 15px;
+  display: block;
+  position: relative;
+}
+
+.comments-list li:after {
+  content: "";
+  display: block;
+  clear: both;
+  height: 0;
+  width: 0;
+}
+
+.reply-list {
+  padding-left: 88px;
+  clear: both;
+  margin-top: 15px;
+}
+
+/**
+* Avatar
+---------------------------*/
+.comments-list .comment-avatar {
+  width: 65px;
+  height: 65px;
+  position: relative;
+  z-index: 99;
+  float: left;
+  border: 3px solid #FFF;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+
+.comments-list .comment-avatar img {
+  width: 100%;
+  height: 100%;
+}
+
+.reply-list .comment-avatar {
+  width: 50px;
+  height: 50px;
+}
+
+.comment-main-level:after {
+  content: "";
+  width: 0;
+  height: 0;
+  display: block;
+  clear: both;
+}
+
+/**
+* Caja del Comentario
+---------------------------*/
+.comments-list .comment-box {
+  width: 680px;
+  float: right;
+  position: relative;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+}
+
+.comments-list .comment-box:before, .comments-list .comment-box:after {
+  content: "";
+  height: 0;
+  width: 0;
+  position: absolute;
+  display: block;
+  border-width: 10px 12px 10px 0;
+  border-style: solid;
+  border-color: transparent #FCFCFC;
+  top: 8px;
+  left: -11px;
+}
+
+.comments-list .comment-box:before {
+  border-width: 11px 13px 11px 0;
+  border-color: transparent rgba(0, 0, 0, 0.05);
+  left: -12px;
+}
+
+.reply-list .comment-box {
+  width: 610px;
+}
+
+.comment-box .comment-head {
+  background: #FCFCFC;
+  padding: 10px 12px;
+  border-bottom: 1px solid #E5E5E5;
+  overflow: hidden;
+  border-radius: 4px 4px 0 0;
+}
+
+.comment-box .comment-head i {
+  float: right;
+  margin-left: 14px;
+  position: relative;
+  top: 2px;
+  color: #A6A6A6;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.comment-box .comment-head i:hover {
+  color: #03658c;
+}
+
+.comment-box .comment-name {
+  color: #283035;
+  font-size: 14px;
+  font-weight: 700;
+  float: left;
+  margin-right: 10px;
+}
+
+.comment-box .comment-name a {
+  color: #283035;
+}
+
+.comment-box .comment-head span {
+  float: left;
+  color: #999;
+  font-size: 13px;
+  position: relative;
+  top: 1px;
+}
+
+.comment-box .comment-content {
+  background: #FFF;
+  padding: 12px;
+  font-size: 15px;
+  color: #595959;
+  border-radius: 0 0 4px 4px;
+}
+
+.comment-box .comment-name.by-author, .comment-box .comment-name.by-author a {
+  color: #03658c;
+}
+
+.comment-box .comment-name.by-author:after {
+  content: "autor";
+  background: #03658c;
+  color: #FFF;
+  font-size: 12px;
+  padding: 3px 5px;
+  font-weight: 700;
+  margin-left: 10px;
+  border-radius: 3px;
+}
+
+/** =====================
+* Responsive
+========================*/
+@media only screen and (max-width: 766px) {
+  .comments-container {
+    width: 480px;
+  }
+  .comments-list .comment-box {
+    width: 390px;
+  }
+  .reply-list .comment-box {
+    width: 320px;
+  }
 }/*# sourceMappingURL=estilos.css.map */
